--- a/src/Clients/SPAClient/Shared/NavMenu.razor
+++ b/src/Clients/SPAClient/Shared/NavMenu.razor
@@ -21,7 +21,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch rooms data
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchsummarydata">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch summary data
             </NavLink>
         </div>
     </nav>
